@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.90 (gritter) 2/17/06";
+	"@(#)/usr/ucb/otfdump.sl	5.91 (gritter) 2/17/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.90 (gritter) 2/17/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.90 (gritter) 2/17/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.91 (gritter) 2/17/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.91 (gritter) 2/17/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.90 (gritter) 2/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.91 (gritter) 2/17/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.90 (gritter) 2/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.91 (gritter) 2/17/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.90";
+const char revision[] = "5.91";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -27,7 +27,7 @@ malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
 n1.c: * Sccsid @(#)n1.c	1.63 (gritter) 2/17/06
 n2.c: * Sccsid @(#)n2.c	1.14 (gritter) 12/19/05
 n3.c: * Sccsid @(#)n3.c	1.72 (gritter) 1/31/06
-n4.c: * Sccsid @(#)n4.c	1.21 (gritter) 12/19/05
+n4.c: * Sccsid @(#)n4.c	1.22 (gritter) 2/17/06
 n5.c: * Sccsid @(#)n5.c	1.36 (gritter) 2/17/06
 n7.c: * Sccsid @(#)n7.c	1.42 (gritter) 2/5/06
 n8.c: * Sccsid @(#)n8.c	1.18 (gritter) 12/19/05
